Corrected folder structure

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ restraining_bolt/restraining_bolt.code-workspace
 /restraining_bolt/.vs/restraining_bolt/v16
 /restraining_bolt/Debug
 /restraining_bolt/__vm
+/src/.vs/restraining_bolt/v16
+/src/Debug
+/src/__vm
