--- a/src/restraining_bolt.vcxproj.filters
+++ b/src/restraining_bolt.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="FileMAVLinkReader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="__vm\.restraining-bolt.vsarduino.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MAVLinkReader.cpp">
