--- a/src/restraining_bolt.vcxproj.filters
+++ b/src/restraining_bolt.vcxproj.filters
@@ -19,6 +19,7 @@
     <None Include="src\arduino folders read me.txt">
       <Filter>Misc Files</Filter>
     </None>
+    <None Include="..\README.md" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="__vm\.restraining_bolt.vsarduino.h">
