--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ restraining_bolt/restraining_bolt.code-workspace
 /src/Debug
 /src/__vm
 /__vm
+/Release
+/.vs/restraining_bolt/v16/ipch/AutoPCH
+/.vs/restraining_bolt/v16/Browse.VC.db-shm
+/.vs/restraining_bolt/v16/Browse.VC.db-wal
+/.vs/restraining_bolt/v16/Browse.VC.opendb
