--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ restraining_bolt/restraining_bolt.code-workspace
 /.vs/restraining_bolt/v16/Browse.VC.db-shm
 /.vs/restraining_bolt/v16/Browse.VC.db-wal
 /.vs/restraining_bolt/v16/Browse.VC.opendb
+.vs/restraining_bolt/v16/Browse.VC.db
+.vs/restraining_bolt/v16/.suo
+*.db
+.vs/restraining_bolt/v16/.suo
