Adding logic for GPS fix monitoring

--- a/sdcard/config.ini
+++ b/sdcard/config.ini
@@ -15,3 +15,18 @@ fileSpeedMilliseonds=10
 # Number of seconds to wait after an issue is detected before call emergency stop. Lower numbers can cause premature stops in testing mode.
 # Note: Mission Planner may have missed some telemetry when logging. This might cause emergency stops during emulation. 
 secondsBeforeEmergencyStop=5
+
+# The lowest acceptable value for GPS fix, any lower, pause the mission. 
+# Taken from the GPS ( 1  or 2 ) that has the highest value
+#
+# Value	Field Name	Description
+# 0	GPS_FIX_TYPE_NO_GPS	No GPS connected
+# 1	GPS_FIX_TYPE_NO_FIX	No position information, GPS is connected
+# 2	GPS_FIX_TYPE_2D_FIX	2D position
+# 3	GPS_FIX_TYPE_3D_FIX	3D position
+# 4	GPS_FIX_TYPE_DGPS	DGPS/SBAS aided 3D position
+# 5	GPS_FIX_TYPE_RTK_FLOAT	RTK float, 3D position
+# 6	GPS_FIX_TYPE_RTK_FIXED	RTK Fixed, 3D position
+# 7	GPS_FIX_TYPE_STATIC	Static fixed, typically used for base stations
+# 8	GPS_FIX_TYPE_PPP	PPP, 3D position.
+lowestGPSFixType=5
