Added new sounds for SD card failure and others. Fixed configuration file defect.

--- a/sdcard/config.ini
+++ b/sdcard/config.ini
@@ -2,12 +2,12 @@
 # Place this file in the root directory of SD card
 
 # test=true - Read telemetry from test file and do a simulated mission with trace messages written to USB serial
-# test=fasle - Read telemetry from Serial1 for live missions
+# test=false - Read telemetry from Serial1 for live missions
 test=false
 
-# testFileName="test.log" The name of the telemetry file to read while in test mode. Mission Planner ".tlogs" have been tested and work.
+# testFileName=test.log The name of the telemetry file to read while in test mode. Mission Planner ".tlogs" have been tested and work.
 # Use 8.3 formatted filename to ensure compatibility 
-testFileName="test.log"
+testFileName=test.log
 
 # fileSpeedMilliseonds=10 How fast to read from telemtry file while in test mode. Going faster than this may cause MissionMonitor to miss state changes
 fileSpeedMilliseonds=10
